language/move-lang/tests/move_check/parser/expr_abort_braces.exp
error: 

   ┌── tests/move_check/parser/expr_abort_braces.move:4:15 ───
   │
 4 │         abort if (v == 0) 10 else v
   │               ^^ Unrecognized Token: if
   ·
 4 │         abort if (v == 0) 10 else v
   │               -- Expected:  "move", "copy", "break", "continue", "[Name]", "[Name<Types>]", "[Address]", "true", "false", "[U64]", "(", "{", "::"
   │

