language/move-lang/tests/move_check/parser/expr_abort_braces.move
module M {
    f(v: u64) {
        // Braces are not required for a control expression inside "abort"
        abort if (v == 0) 10 else v
    }
}
